--- a/src/components/style.css
+++ b/src/components/style.css
@@ -8,6 +8,7 @@
    grid-row-end: 2;
    grid-column-start: 1;
    grid-column-end: 2;
+   margin-top: 4vh;
 }
 
 .right {
@@ -18,7 +19,7 @@
 
 .g-note {
    grid-row-start: 2;
-   grid-row-end: auto;
+   grid-row-end: 3;
    grid-column-start: 3;
    grid-column-end: auto;
 }
@@ -32,5 +33,6 @@
 } */
 
 .inmain {
-   grid-template-rows: 64px 64px 1fr;
+   grid-template-rows: 64px 1fr;
+   grid-template-columns: 64px 300px 64px;
 }
