--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap');
+
+
 body {
    margin: 0;
+   font-family: 'Comfortaa', cursive;
+   /* background-color: #8EC5FC;
+   background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
+
+   background-color: #8BC6EC;
+   background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+   
+   /* top:  */
+   /* background-color: #A9C9FF;
+   background-image: linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%); */
+}
+
+.dock {
+   position: absolute;
+   right: 1vw;
+   bottom: 20vh;
+}
+
+.pr {
+   background-color: #A9C9FF;
+   background-image: linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%);
 }
 
 .container {
-   height: calc(100vh + 100px);
+   height: 100vh;
    width: 100vw;
    display: grid;
-   /* grid-template-columns: 0.5fr 2fr 0.5fr;
-   grid-template-rows: 1fr 1.5fr 100px; */
-   grid-template: 1fr 1.5fr 100px / 0.5fr 2fr 0.5fr; /*  rows / columns  */
+   /* background: url('../public/waves-01.svg') no-repeat; */
+   grid-template: 1fr 1.5fr / 0.5fr 2fr 0.5fr; /*  rows / columns  */
+}
+
+.waves {
+   position: absolute;
+   fill: white;
+   left: -7px;
+   width: 100vw;
+   stroke: #fff;
+   stroke-miterlimit: 10;
+   stroke-width: 8px;
+   opacity: 0.6;
 }
 
 .area {
@@ -17,8 +51,7 @@ body {
    grid-column: 2/3;
    width: 100%;
    height: 100%;
-   /* height: 80vh; */
-   /* width: 100vw; */
+
 
    /* background-image: linear-gradient(rgba(0, 0, 0, 0) 18%, rgb(163, 136, 231) 80%), linear-gradient(rgb(163, 136, 231) 5%, rgba(0, 0, 0, 0) 20%), linear-gradient(rgba(255, 255, 255, 0.2) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, 0.2) 1px, transparent 1px);
    background-size: 100% 100%, 100% 100%, 30px 30px, 30px 30px; */
@@ -43,43 +76,34 @@ body {
    position: absolute;
    top: 25%;
    transition: all .4s;
-   /* -moz-transition: all .4s;
-   -webkit-transition: all .4s;
-    -o-transition: all .4s; */
-   /* left: calc(50% - 3px); */
    z-index: 4;
 }
 
 
 .main {
-   /* max-width: 700px; */
-   /* margin: 0 auto; */
    grid-row: 2/3;
    grid-column: 2/3;
-   /* display: grid; 
-   grid-template: ; */
-   display: grid;
-   justify-content: center;
    width: 100%;
    height: 100%;
    position: relative;
    /* z-index: 6; */
    /* width: 100%;
    height:100%; */
-
 }
+
 
 .inmain {
    position: absolute;
    grid-template-rows: 48px 1fr;
+   grid-template-columns: 48px 300px 48px;
    max-width: 100%;
    justify-content: center;
-   padding-top: 5vh;
+   /* padding-top: 5vh; */
    height: 100%;
    width: 100%;
-   box-sizing: border-box;
+   /* box-sizing: border-box; */
    display: grid;
-   gap: 2vh 8px;  
+   gap: 15vh 8px;  
 }
 
 /* .center {
@@ -99,27 +123,30 @@ body {
    margin-left: auto;
    margin-right: auto;
 }
-.pic {
-   /* width: 400px; */
-   display: block;
-   width: 100%;
-   height: 100%;
-   object-fit: contain;
-   position: relative;
-   /* border: 1px solid black; */
-   /* height: 100%; */
-}
+
 
 .pic {
    display: block;
    max-width: 100%;
-   top: -10%;
    width: 100%;
    height: 100%;
    min-height: 330px;
    position: relative;
    object-fit: contain;
    object-position: center top;
+   z-index: 2;
+}
+
+.picPrima {
+   display: block;
+   max-width: 100%;
+   width: 100%;
+   height: 100%;
+   min-height: 330px;
+   position: relative;
+   object-fit: contain;
+   object-position: center top;
+   z-index: 2;
 }
 
 
@@ -133,27 +160,59 @@ body {
 
 
 .d-note {
-   /* position: absolute; */
-   font-size: 30px;
-   height: 50px;
-   width: 50px;
+   all: unset;
 
+   text-align: center;
+   font-size: 25px;
+   height: 70px;
+   width: 70px;
+
+   color: #fff;
+   border: 2px solid #fff;
    border-radius: 50%;
    z-index: 5;
-
+   cursor: pointer;
 }
+
+
 
 .g-note {
-   /* position: absolute; */
-   font-size: 30px;
-   height: 50px;
-   width: 50px;
+   all: unset;
 
+   text-align: center;
+   font-size: 25px;
+   height: 70px;
+   width: 70px;
+
+   color: #fff;
+   border: 2px solid #fff;
    border-radius: 50%;
    z-index: 5;
+   cursor: pointer;
+}
+
+.g-note:hover {
+
+   color: #000;
+}
+
+.d-note:hover {
+
+   color: #000;
+}
+.green {
+   /* background-color: green; */
+   color: #000;
+   background-color: #fff;
+   border-color: #31d233;
+   /* background-image: linear-gradient(to right, #006175 0%, #00a950 100%); */
+   box-shadow: 0 0 8px 0 #31d233 inset, 0 0 8px 4px #31d233;
+   /* box-shadow: 0 0 10px 4px #31d233; */
 }
 
 
-.green {
-   background-color: green;
+
+
+.theAnswer {
+   background-color: #31d233;
 }
