--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -5,7 +5,13 @@
    height: 100px;
    background-color: rgb(45, 32, 81);
    display: flex;
+   flex-direction: column;
    color: rgba(255, 255, 255, 0.8);
-   justify-content: center;
+   justify-content: space-evenly;
    align-items: center;
+}
+
+.footer a {
+   text-decoration: none;
+   color: rgba(255, 255, 255, 0.8);
 }
