--- a/src/index.css
+++ b/src/index.css
@@ -37,15 +37,20 @@ body {
    grid-template: 1fr 1.5fr / 0.5fr 2fr 0.5fr; /*  rows / columns  */
 }
 
-
+.back {
+   width: 100%;
+   height: 40vh;
+   position: absolute;
+}
 
 .waves {
-   position: absolute;
+   
    height: auto;
    fill: white;
    left: -7px;
-   width: 110vw;
-   /* width: auto; */
+   
+
+   width: 100%;
    stroke: #fff;
    stroke-miterlimit: 10;
    stroke-width: 8px;
@@ -191,4 +196,3 @@ body {
    background-color: #ebf297;
    transition: all 0.3s step-end;
 }
-
