--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 
 body {
    margin: 0;
+   padding: 0;
    font-family: 'Comfortaa', cursive;
    /* background-color: #8EC5FC;
    background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); */
@@ -37,11 +38,11 @@ body {
    grid-template: 1fr 1.5fr / 0.5fr 2fr 0.5fr; /*  rows / columns  */
 }
 
-.back {
+/* .back {
    width: 100%;
    height: 40vh;
    position: absolute;
-}
+} */
 
 .waves {
    
