--- a/src/components/Dock/style.css
+++ b/src/components/Dock/style.css
@@ -66,7 +66,7 @@
       padding: 3px;
       left: 0;
       right: 0;
-      bottom: 0.5vh;
+      bottom: 0.5dvh;
       margin: auto;
       text-align: center;
       z-index: 999;
