trying height vars

--- a/src/components/Dombyra/style.css
+++ b/src/components/Dombyra/style.css
@@ -32,9 +32,9 @@
    grid-template-columns: 64px 300px 64px;
 }
 
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
    .inmain {
       grid-template-columns: 64px 230px 64px;
       bottom: -39px;
    }  
-}
+} */
