--- a/src/components/Qyl/style.css
+++ b/src/components/Qyl/style.css
@@ -1,3 +1,6 @@
+
+
+
 .inmain-qyl {
    grid-template-rows: 70px 1fr;
    grid-template-columns: 70px 400px 70px;
@@ -29,4 +32,16 @@
    grid-column-start: 1;
    grid-column-end: 2;
    margin-top: 2vh;
+}
+
+
+.main {
+   grid-row: 2/3;
+   grid-column: 2/3;
+   width: 100%;
+   height: 100%;
+   position: relative;
+   /* z-index: 6; */
+   /* width: 100%;
+   height:100%; */
 }
