--- a/src/components/BackWaves/style.css
+++ b/src/components/BackWaves/style.css
@@ -8,5 +8,5 @@
    background-image: url('../../../public/waves_final-02.svg');
    background-repeat: no-repeat;
    background-size: cover;
-   background-position: 
+   /* background-position:  */
 }
