--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@ body {
    width: 100%;
    height: 100%;
    position: relative;
-   top: -10%;
+   /* top: -10%; */
    /* z-index: 6; */
    /* width: 100%;
    height:100%; */
