--- a/src/components/Qyl/style.css
+++ b/src/components/Qyl/style.css
@@ -1,55 +1,83 @@
-
-
-
-.inmain-qyl {
-   grid-template-rows: 70px 1fr;
-   grid-template-columns: 70px 400px 70px;
+.parent-qobyz {
+   width: 570px;
+   height: 510px;
    position: absolute;
-   max-width: 100%;
-   justify-content: center;
-   /* padding-top: 5vh; */
-   height: 100%;
-   width: 100%;
-   /* box-sizing: border-box; */
-   display: grid;
-   gap: 8vh 8px;
+   margin: auto;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   /* border: 1px solid black; */
+   z-index: 2;
 }
+
+.img-qobyz {
+   position: absolute;
+   width: 328px;
+   height: auto;
+   bottom: -2px;
+   margin: auto;
+   left: 0;
+   right: 0;
+}
+
 
 .a-note-qyl {
-   /* transform: translateY(150%); */
-   grid-row-start: 1;
-   grid-row-end: 2;
-   grid-column-start: 3;
-   grid-column-end: auto;
-   margin-top: 12vh;
+   position: absolute;
+   top: 170px;
+   right: 30px;
 }
-
 
 .d-note-qyl {
-   grid-row-start: 2;
-   grid-row-end: 3;
-   
-   grid-column-start: 1;
-   grid-column-end: 2;
-   margin-top: 2vh;
+   position: absolute;
+   top: 220px;
+   left: 30px;
 }
 
 
-.main {
-   grid-row: 2/3;
-   grid-column: 2/3;
-   width: 100%;
-   height: 100%;
-   position: relative;
-   /* z-index: 6; */
-   /* width: 100%;
-   height:100%; */
-}
-
-
-@media screen and (max-width: 500px) {
-   .inmain-qyl {
-      grid-template-rows: 40px 40px 1fr;
-      grid-template-columns: 40px 250px 40px;
+@media screen and (max-width: 570px) {
+   .parent-qobyz {
+      width: 370px;
+      height: 510px;
    }
+
+   .img-qobyz {
+      width: 280px;
+
+   }
+
+   .a-note-qyl {
+      top: 212px;
+      right: 12px;
+   }
+
+   .d-note-qyl {
+      top: 286px;
+      left: unset;
+      right: 12px;
+   }
+
+}
+
+@media screen and (max-width: 370px) {
+   .parent-qobyz {
+      width: 320px;
+      height: 510px;
+   }
+
+   .img-qobyz {
+      width: 250px;
+
+   }
+
+   .a-note-qyl {
+      top: 238px;
+      right: 6px;
+   }
+
+   .d-note-qyl {
+      top: 312px;
+      left: unset;
+      right: 6px;
+   }
+
 }
