prima-qobyz layout code was changed from grid -> absolutes

--- a/src/components/Qyl/style.css
+++ b/src/components/Qyl/style.css
@@ -6,7 +6,7 @@
    left: 0;
    right: 0;
    bottom: 0;
-   /* border: 1px solid black; */
+   border: 1px solid black;
    z-index: 2;
 }
 
@@ -37,11 +37,10 @@
 @media screen and (max-width: 570px) {
    .parent-qobyz {
       width: 370px;
-      height: 510px;
    }
 
    .img-qobyz {
-      width: 280px;
+      width: 284px;
 
    }
 
