--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -6,7 +6,7 @@
    background-color: rgb(45, 32, 81);
    display: flex;
    flex-direction: column;
-   color: rgba(255, 255, 255, 0.8);
+   color: rgba(255, 255, 255);
    justify-content: space-evenly;
    z-index: 999;
    align-items: center;
@@ -15,5 +15,5 @@
 
 .footer a {
    text-decoration: none;
-   color: rgba(255, 255, 255, 0.8);
+   color: rgba(255, 255, 255);
 }
