--- a/src/components/Prima/style.css
+++ b/src/components/Prima/style.css
@@ -1,88 +1,112 @@
-/* .picPrima {
-   display: block;
-   max-width: 100%;
-   width: 100%;
-   height: 100%;
-   min-height: 330px;
-   position: relative;
-   object-fit: contain;
-   object-position: center top;
-   z-index: 2;
-} */
-
 .pr {
    background-color: #A9C9FF;
    background-image: linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%);
 }
 
-.inmain-prima {
-   grid-template-rows: 64px 64px 1fr;
-   grid-template-columns: 64px 300px 64px;
+.parent-prima {
+   width: 470px;
+   height: 470px;
    position: absolute;
-   max-width: 100%;
-   justify-content: center;
-   /* padding-top: 5vh; */
-   height: 100%;
-   width: 100%;
-   /* box-sizing: border-box; */
-   display: grid;
-   gap: 8vh 8px;
+   margin: auto;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   /* border: 1px solid black; */
+   z-index: 2;
 }
 
-.e-note-prima {
-   grid-row-start: 3;
-   grid-row-end: 4;
-   grid-column-start: 3;
-   grid-column-end: 4;
-   margin-top: -2vh;
+.img-prima {
+   position: absolute;
+   width: 218px;
+   height: auto;
+   bottom: -2px;
+   margin: auto;
+   left: 0;
+   right: 0;
 }
 
-.a-note-prima {
-   grid-row-start: 2;
-   grid-row-end: 3;
-   grid-column-start: 3;
-   grid-column-end: 4;
-   margin-top: 1vh;
-}
 
 .d-note-prima {
-   /* transform: translateY(150%); */
-   grid-row-start: 2;
-   grid-row-end: 3;
-   grid-column-start: 1;
-   grid-column-end: 2;
-   margin-top: 3vh;
+   position: absolute;
+   top: 184px;
+   left: 36px;
 }
 
 .g-note-prima {
-   /* transform: translateY(150%); */
-   grid-row-start: 3;
-   grid-row-end: 4;
-   grid-column-start: 1;
-   grid-column-end: 2;
-   /* margin-top: 12vh; */
+   position: absolute;
+   top: 280px;
+   left: 36px;
+}
+
+.a-note-prima {
+   position: absolute;
+   top: 162px;
+   right: 36px;
+}
+
+.e-note-prima {
+   position: absolute;
+   top: 258px;
+   right: 36px;
 }
 
 
+@media screen and (max-width: 570px) {
+   .parent-prima {
+      width: 370px;
+   }
 
+   .img-prima {
+      width: 196px;
+   }
 
+   .d-note-prima {
+      top: 224px;
+      left: 26px;
+   }
 
-.main {
-   grid-row: 2/3;
-   grid-column: 2/3;
-   width: 100%;
-   height: 100%;
-   position: relative;
-   /* z-index: 6; */
-   /* width: 100%;
-   height:100%; */
+   .g-note-prima {
+      top: 302px;
+      left: 26px;
+   }
+
+   .a-note-prima {
+      top: 204px;
+      right: 26px;
+   }
+
+   .e-note-prima {
+      top: 282px;
+      right: 26px;
+   }
 }
 
+@media screen and (max-width: 370px) {
+   .parent-prima {
+      width: 320px;
+   }
 
-@media screen and (max-width: 500px) {
-.inmain-prima {
-   grid-template-rows: 40px 40px 1fr;
-   grid-template-columns: 40px 200px 40px;
-}
-}
+   .img-prima {
+      width: 176px;
+   }
 
+   .d-note-prima {
+      top: 236px;
+      left: 10px;
+   }
+
+   .g-note-prima {
+      top: 302px;
+      left: 10px;
+   }
+
+   .a-note-prima {
+      top: 236px;
+      right: 10px;
+   }
+
+   .e-note-prima {
+      top: 302px;
+      right: 10px;
+   }
+}
