logo/icon additions

--- a/src/components/Dombyra/style.css
+++ b/src/components/Dombyra/style.css
@@ -2,9 +2,12 @@
    width: 470px;
    height: 470px;
    position: absolute;
+
+   /* these 3 to centralize: */
    margin: auto;
    left: 0;
    right: 0;
+
    bottom: 0;
    /* border: 1px solid black; */
    z-index: 2;
